--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Accueil</title>
 
+    <link rel="stylesheet" href="css/styles.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -14,28 +23,39 @@
 
   <body>
     <header>
-      <div class="wrapper">
-        <a href="" class="brand"><img src="" alt="Logo Alanis Bédard" /></a>
+      <div class="wrapper_nav header__style">
+        <a href="index.html" class="brand"
+          ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
+        /></a>
 
-        <nav class="nav_main">
-          <ul>
+        <nav>
+          <ul class="nav_main">
             <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html">À propos</a></li>
             <li><a href="projects.html">Projets</a></li>
             <li>
-              <a href="contact.html"><img src="" alt="Logo de contact" /></a>
+              <a href="contact.html"
+                ><img src="svg/letter.svg" alt="Logo de contact"
+              /></a>
             </li>
           </ul>
         </nav>
       </div>
     </header>
 
-    <section class="content">
+    <section class="content_index">
       <div class="wrapper">
         <div class="video"></div>
         <div class="index_infos">
-          <img src="" alt="Signature d'Alanis Bédard" class="signature" />
-          <h1>Alanis Bédard</h1>
+          <h1>
+            Alanis Bédard
+            <img
+              src="svg/signature.svg"
+              alt="Signature d'Alanis Bédard"
+              class="signature"
+            />
+          </h1>
+
           <h2>Intégratice multimédia</h2>
           <a href="projects.html" class="button">Mes projets</a>
         </div>
@@ -43,19 +63,57 @@
     </section>
 
     <footer>
-      <div class="wrapper">
+      <div class="wrapper footer__style">
         <span class="line"></span>
         <ul class="socials">
-          <li><a href="https://www.linkedin.com/in/alanisbedard/"></a></li>
-          <li><a href="https://www.behance.net/alanisbedard"></a></li>
-          <li><a href="https://www.instagram.com/alanisbedard/?hl=fr"></a></li>
           <li>
-            <a
-              href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
-            ></a>
+            <a href="https://www.linkedin.com/in/alanisbedard/"
+              ><img
+                class="social_icon"
+                src="svg/social-linkedin.svg"
+                alt="Le LinkedIn d'Alanis Bédard"
+            /></a>
           </li>
-          <li><a href="https://github.com/AlanisBedard"></a></li>
-          <li><a href="https://sketchfab.com/alanisbedard"></a></li>
+          <li>
+            <a href="https://www.behance.net/alanisbedard"
+              ><img
+                class="social_icon"
+                src="svg/social-behance.svg"
+                alt="Le Behance d'Alanis Bédard"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/alanisbedard/?hl=fr"
+              ><img
+                class="social_icon"
+                src="svg/social-instagram.svg"
+                alt="L'Instagram d'Alanis Bédard"
+            /></a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
+              ><img
+                class="social_icon"
+                src="svg/social-youtube.svg"
+                alt="La chaîne Youtube d'Alanis Bédard"
+            /></a>
+          </li>
+          <li>
+            <a href="https://github.com/AlanisBedard"
+              ><img
+                class="social_icon"
+                src="svg/social-github.svg"
+                alt="Le GitHub d'Alanis Bédard"
+            /></a>
+          </li>
+          <li>
+            <a href="https://sketchfab.com/alanisbedard"
+              ><img
+                class="social_icon"
+                src="svg/social-sketchfab.svg"
+                alt="Le Sketchfab d'Alanis Bédard"
+            /></a>
+          </li>
         </ul>
       </div>
     </footer>
