Modifier la page d'accueil et ses styles.

--- a/src/index.html
+++ b/src/index.html
@@ -43,20 +43,35 @@
       </div>
     </header>
 
-    <section class="content_index">
-      <div class="wrapper">
-        <div class="video"></div>
-        <div class="index_infos">
-          <h1>
-            Alanis Bédard
-            <img
-              src="svg/signature.svg"
-              alt="Signature d'Alanis Bédard"
-              class="signature"
-            />
-          </h1>
+    <section class="hero">
+      <div class="wrapper_nav content_index">
+        <div class="video">
+          <div class="video_container">
+            <span class="video_hide1"></span>
+            <iframe
+              src="https://www.youtube.com/embed/bibMXgY5duE?vq=hd1080&controls=0&rel=0&autoplay=1&loop=1&mute=1&playlist=bibMXgY5duE"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+            <span class="video_hide2"></span>
+          </div>
+        </div>
 
-          <h2>Intégratice multimédia</h2>
+        <div class="index_infos">
+          <div class="titles">
+            <h1>
+              Alanis Bédard
+              <img
+                src="svg/signature.svg"
+                alt="Signature d'Alanis Bédard"
+                class="signature"
+              />
+            </h1>
+            <h2>Intégratice multimédia</h2>
+          </div>
+
           <a href="projects.html" class="button">Mes projets</a>
         </div>
       </div>
