--- a/src/contact.html
+++ b/src/contact.html
@@ -43,6 +43,78 @@
       </div>
     </header>
 
+    <section class="hero">
+      <div class="wrapper contact__content">
+        <div class="contact_infos">
+          <h1>Contact</h1>
+          <p>
+            Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo justo.
+            Nam at accumsan metus. Duis sit amet odio felis. Pellentesque
+            pharetra interdum congue. Maecenas quis ligula sit amet justo
+            molestie efficitur. Curabitur aliquet odio sed sapien tempor
+            iaculis. Sed congue tincidunt orci nec vulputate.
+          </p>
+          <p>Téléphone : <a href="tel:579-883-9990">(579) 883-9990</a></p>
+          <p>
+            Courriel :
+            <a href="mailto:alanisbedard@gmail.com">alanisbedard@gmail.com</a>
+          </p>
+        </div>
+
+        <div class="form">
+          <div class="input">
+            <label class="input__label" for="name">Nom</label>
+            <input
+              class="input__element"
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Prénom Nom"
+              required
+            />
+
+            <p class="texte-erreur">Veillez écrire votre nom</p>
+          </div>
+          <div class="input">
+            <label class="input__label" for="email">Adresse courriel</label>
+            <input
+              class="input__element"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="exemple@courriel.com"
+              required
+            />
+
+            <p class="texte-erreur">
+              Veillez bien écrire votre adresse courriel
+            </p>
+          </div>
+
+          <div class="input textarea u-grid-fullwidth">
+            <label class="input__label" for="comment">Message</label>
+            <textarea
+              class="input__element input_textarea"
+              name="comment"
+              maxlength="500"
+              id="comment"
+              placeholder=" "
+            ></textarea>
+            <p class="texte-erreur">Veillez écrire votre message</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="references">
+      <div class="wrapper">
+        <div class="buttons">
+          <a href="" class="button">Télécharger ma lettre de recommendation</a>
+          <a href="" class="button">Télécharger mon CV</a>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <div class="wrapper footer__style">
         <span class="line"></span>
