Ajout des images de la page À propos, modification du html de cette page et ajout de ceratins style. (WIP)

--- a/src/about.html
+++ b/src/about.html
@@ -43,6 +43,152 @@
       </div>
     </header>
 
+    <section class="hero">
+      <div class="wrapper">
+        <div class="about__hero">
+          <img
+            src="images/about-alanisbedard.png"
+            alt="Photo d'Alanis Bédard"
+            class="about__picture"
+          />
+          <div class="about_alanisbedard">
+            <h1>
+              Alanis Bédard
+              <img
+                src="svg/signature.svg"
+                alt="Signature d'Alanis Bédard"
+                class="about__signature"
+              />
+            </h1>
+            <h2>Intégratice multimédia</h2>
+            <p>
+              Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo
+              justo. Nam at accumsan metus. Duis sit amet odio felis.
+              Pellentesque pharetra interdum congue. Maecenas quis ligula sit
+              amet justo molestie efficitur. Curabitur aliquet odio sed sapien
+              tempor iaculis. Sed congue tincidunt orci nec vulputate.
+            </p>
+          </div>
+        </div>
+        <span class="line"></span>
+      </div>
+    </section>
+
+    <section class="knowledge">
+      <div class="wrapper">
+        <div class="skills">
+          <h3>Compétenses</h3>
+          <ul class="list_dot">
+            <li>Animation 2D et 3D</li>
+            <li>Modélisation</li>
+            <li>Design</li>
+            <li>Illustrations</li>
+            <li>Web</li>
+          </ul>
+        </div>
+        <div class="softwares">
+          <ul>
+            <li>
+              <a href="https://www.blender.org/"
+                ><img
+                  src="svg/software-blender.svg"
+                  alt="Logo du logiciel Blender"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.figma.com/fr/"
+                ><img src="svg/software-figma.svg" alt="Logo du logiciel Figma"
+              /></a>
+            </li>
+            <li>
+              <a href="https://procreate.art/"
+                ><img
+                  src="svg/software-procreate.svg"
+                  alt="Logo du logiciel Procreate"
+              /></a>
+            </li>
+            <li>
+              <a href="https://code.visualstudio.com/"
+                ><img
+                  src="svg/software-vscode.svg"
+                  alt="Logo du logiciel Visual Studio Code"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.adobe.com/ca_fr/"
+                ><img
+                  src="svg/software-adobecreative.svg"
+                  alt="Logo de la Suite Adobe"
+              /></a>
+            </li>
+          </ul>
+        </div>
+        <div class="languages">
+          <h3>Languages informatiques</h3>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>PHP</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="about_medias">
+      <img
+        src="images/about-projects.png"
+        alt="Montage photo de ceratins projet d'Alanis Bédard"
+      />
+      <p class="about_qualites">
+        Persévérance Créativité Minutie Patience Persévérance Créativité Minutie
+        Patience
+      </p>
+    </section>
+
+    <section class="achievements">
+      <div class="wrapper">
+        <div class="scholarship">
+          <h3>Bourses</h3>
+          <ul>
+            <li>
+              Bourse d’excellence pour la meilleure cote R en Techniques
+              d’intégration multimédia<span>2022</span>
+            </li>
+            <li>
+              Prix ArcelorMittal Produits longs Canada 2e cycle (Défi génie
+              inventif ÉTS) <span>2019</span>
+            </li>
+            <li>
+              Bourse de la Fondation Jean-Louis Tassé (Mathématiques)
+              <span>2017</span>
+            </li>
+          </ul>
+        </div>
+        <div class="objectif">
+          <p>
+            Obtenir de nouvelles compétences et expériences en entreprise dans
+            l’univers multimédia.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="references">
+      <div class="wrapper">
+        <div class="buttons">
+          <a href="" class="button">Télécharger ma lettre de recommendation</a>
+          <a href="" class="button">Télécharger mon CV</a>
+        </div>
+        <span class="line"></span>
+      </div>
+    </section>
+
+    <section class="presentation">
+      <div class="wrapper">
+        <h3>Vidéo de présentation</h3>
+      </div>
+    </section>
+
     <footer>
       <div class="wrapper footer__style">
         <span class="line"></span>
