Modifier la page À propos pour y ajouter les styles de la section Apprentissages.

--- a/src/about.html
+++ b/src/about.html
@@ -44,7 +44,7 @@
     </header>
 
     <section class="hero">
-      <div class="wrapper">
+      <div class="wrapper about__hero__content">
         <div class="about__hero">
           <img
             src="images/about-alanisbedard.png"
@@ -75,7 +75,7 @@
     </section>
 
     <section class="knowledge">
-      <div class="wrapper">
+      <div class="wrapper knowledge__content">
         <div class="skills">
           <h3>Compétenses</h3>
           <ul class="list_dot">
@@ -87,6 +87,7 @@
           </ul>
         </div>
         <div class="softwares">
+          <h3>Logiciels</h3>
           <ul>
             <li>
               <a href="https://www.blender.org/"
@@ -125,7 +126,7 @@
         </div>
         <div class="languages">
           <h3>Languages informatiques</h3>
-          <ul>
+          <ul class="list_dot">
             <li>HTML</li>
             <li>CSS</li>
             <li>PHP</li>
