Ajout de la classe pour le conteneur du site.

--- a/src/contact.html
+++ b/src/contact.html
@@ -22,153 +22,157 @@
   </head>
 
   <body>
-    <header>
-      <div class="wrapper_nav header__style">
-        <a href="index.html" class="brand"
-          ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
-        /></a>
+    <div class="site-container">
+      <header>
+        <div class="wrapper_nav header__style">
+          <a href="index.html" class="brand"
+            ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
+          /></a>
 
-        <nav>
-          <ul class="nav_main">
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="about.html">À propos</a></li>
-            <li><a href="projects.html">Projets</a></li>
-            <li>
-              <a href="contact.html"
-                ><img src="svg/letter.svg" alt="Logo de contact"
-              /></a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-
-    <section class="hero">
-      <div class="wrapper contact__content">
-        <div class="contact_infos">
-          <h1>Contact</h1>
-          <p>
-            Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo justo.
-            Nam at accumsan metus. Duis sit amet odio felis. Pellentesque
-            pharetra interdum congue. Maecenas quis ligula sit amet justo
-            molestie efficitur. Curabitur aliquet odio sed sapien tempor
-            iaculis. Sed congue tincidunt orci nec vulputate.
-          </p>
-          <p>Téléphone : <a href="tel:579-883-9990">(579) 883-9990</a></p>
-          <p>
-            Courriel :
-            <a href="mailto:alanisbedard@gmail.com">alanisbedard@gmail.com</a>
-          </p>
+          <nav>
+            <ul class="nav_main">
+              <li><a href="index.html">Accueil</a></li>
+              <li><a href="about.html">À propos</a></li>
+              <li><a href="projects.html">Projets</a></li>
+              <li>
+                <a href="contact.html"
+                  ><img src="svg/letter.svg" alt="Logo de contact"
+                /></a>
+              </li>
+            </ul>
+          </nav>
         </div>
+      </header>
 
-        <div class="form">
-          <div class="input">
-            <label class="input__label" for="name">Nom</label>
-            <input
-              class="input__element"
-              type="text"
-              name="name"
-              id="name"
-              placeholder="Prénom Nom"
-              required
-            />
-
-            <p class="texte-erreur">Veillez écrire votre nom</p>
-          </div>
-          <div class="input">
-            <label class="input__label" for="email">Adresse courriel</label>
-            <input
-              class="input__element"
-              type="email"
-              name="email"
-              id="email"
-              placeholder="exemple@courriel.com"
-              required
-            />
-
-            <p class="texte-erreur">
-              Veillez bien écrire votre adresse courriel
+      <section class="hero">
+        <div class="wrapper contact__content">
+          <div class="contact_infos">
+            <h1>Contact</h1>
+            <p>
+              Maecenas commodo vestibulum ullamcorper. Etiam vitae commodo
+              justo. Nam at accumsan metus. Duis sit amet odio felis.
+              Pellentesque pharetra interdum congue. Maecenas quis ligula sit
+              amet justo molestie efficitur. Curabitur aliquet odio sed sapien
+              tempor iaculis. Sed congue tincidunt orci nec vulputate.
+            </p>
+            <p>Téléphone : <a href="tel:579-883-9990">(579) 883-9990</a></p>
+            <p>
+              Courriel :
+              <a href="mailto:alanisbedard@gmail.com">alanisbedard@gmail.com</a>
             </p>
           </div>
 
-          <div class="input textarea u-grid-fullwidth">
-            <label class="input__label" for="comment">Message</label>
-            <textarea
-              class="input__element input_textarea"
-              name="comment"
-              maxlength="500"
-              id="comment"
-              placeholder=" "
-            ></textarea>
-            <p class="texte-erreur">Veillez écrire votre message</p>
+          <div class="form">
+            <div class="input">
+              <label class="input__label" for="name">Nom</label>
+              <input
+                class="input__element"
+                type="text"
+                name="name"
+                id="name"
+                placeholder="Prénom Nom"
+                required
+              />
+
+              <p class="texte-erreur">Veillez écrire votre nom</p>
+            </div>
+            <div class="input">
+              <label class="input__label" for="email">Adresse courriel</label>
+              <input
+                class="input__element"
+                type="email"
+                name="email"
+                id="email"
+                placeholder="exemple@courriel.com"
+                required
+              />
+
+              <p class="texte-erreur">
+                Veillez bien écrire votre adresse courriel
+              </p>
+            </div>
+
+            <div class="input textarea u-grid-fullwidth">
+              <label class="input__label" for="comment">Message</label>
+              <textarea
+                class="input__element input_textarea"
+                name="comment"
+                maxlength="500"
+                id="comment"
+                placeholder=" "
+              ></textarea>
+              <p class="texte-erreur">Veillez écrire votre message</p>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="references">
-      <div class="wrapper">
-        <div class="buttons">
-          <a href="" class="button">Télécharger ma lettre de recommendation</a>
-          <a href="" class="button">Télécharger mon CV</a>
+      <section class="references">
+        <div class="wrapper">
+          <div class="buttons">
+            <a href="" class="button"
+              >Télécharger ma lettre de recommendation</a
+            >
+            <a href="" class="button">Télécharger mon CV</a>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <footer>
-      <div class="wrapper footer__style">
-        <span class="line"></span>
-        <ul class="socials">
-          <li>
-            <a href="https://www.linkedin.com/in/alanisbedard/"
-              ><img
-                class="social_icon"
-                src="svg/social-linkedin.svg"
-                alt="Le LinkedIn d'Alanis Bédard"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.behance.net/alanisbedard"
-              ><img
-                class="social_icon"
-                src="svg/social-behance.svg"
-                alt="Le Behance d'Alanis Bédard"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/alanisbedard/?hl=fr"
-              ><img
-                class="social_icon"
-                src="svg/social-instagram.svg"
-                alt="L'Instagram d'Alanis Bédard"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
-              ><img
-                class="social_icon"
-                src="svg/social-youtube.svg"
-                alt="La chaîne Youtube d'Alanis Bédard"
-            /></a>
-          </li>
-          <li>
-            <a href="https://github.com/AlanisBedard"
-              ><img
-                class="social_icon"
-                src="svg/social-github.svg"
-                alt="Le GitHub d'Alanis Bédard"
-            /></a>
-          </li>
-          <li>
-            <a href="https://sketchfab.com/alanisbedard"
-              ><img
-                class="social_icon"
-                src="svg/social-sketchfab.svg"
-                alt="Le Sketchfab d'Alanis Bédard"
-            /></a>
-          </li>
-        </ul>
-      </div>
-    </footer>
+      <footer>
+        <div class="wrapper footer__style">
+          <span class="line"></span>
+          <ul class="socials">
+            <li>
+              <a href="https://www.linkedin.com/in/alanisbedard/"
+                ><img
+                  class="social_icon"
+                  src="svg/social-linkedin.svg"
+                  alt="Le LinkedIn d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.behance.net/alanisbedard"
+                ><img
+                  class="social_icon"
+                  src="svg/social-behance.svg"
+                  alt="Le Behance d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/alanisbedard/?hl=fr"
+                ><img
+                  class="social_icon"
+                  src="svg/social-instagram.svg"
+                  alt="L'Instagram d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
+                ><img
+                  class="social_icon"
+                  src="svg/social-youtube.svg"
+                  alt="La chaîne Youtube d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://github.com/AlanisBedard"
+                ><img
+                  class="social_icon"
+                  src="svg/social-github.svg"
+                  alt="Le GitHub d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://sketchfab.com/alanisbedard"
+                ><img
+                  class="social_icon"
+                  src="svg/social-sketchfab.svg"
+                  alt="Le Sketchfab d'Alanis Bédard"
+              /></a>
+            </li>
+          </ul>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
