--- a/src/project5.html
+++ b/src/project5.html
@@ -22,81 +22,83 @@
   </head>
 
   <body>
-    <header>
-      <div class="wrapper_nav header__style">
-        <a href="index.html" class="brand"
-          ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
-        /></a>
+    <div class="site-container">
+      <header>
+        <div class="wrapper_nav header__style">
+          <a href="index.html" class="brand"
+            ><img src="svg/logo.svg" alt="Logo Alanis Bédard"
+          /></a>
 
-        <nav>
-          <ul class="nav_main">
-            <li><a href="index.html">Accueil</a></li>
-            <li><a href="about.html">À propos</a></li>
-            <li><a href="projects.html">Projets</a></li>
+          <nav>
+            <ul class="nav_main">
+              <li><a href="index.html">Accueil</a></li>
+              <li><a href="about.html">À propos</a></li>
+              <li><a href="projects.html">Projets</a></li>
+              <li>
+                <a href="contact.html"
+                  ><img src="svg/letter.svg" alt="Logo de contact"
+                /></a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+
+      <footer>
+        <div class="wrapper footer__style">
+          <span class="line"></span>
+          <ul class="socials">
             <li>
-              <a href="contact.html"
-                ><img src="svg/letter.svg" alt="Logo de contact"
+              <a href="https://www.linkedin.com/in/alanisbedard/"
+                ><img
+                  class="social_icon"
+                  src="svg/social-linkedin.svg"
+                  alt="Le LinkedIn d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.behance.net/alanisbedard"
+                ><img
+                  class="social_icon"
+                  src="svg/social-behance.svg"
+                  alt="Le Behance d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/alanisbedard/?hl=fr"
+                ><img
+                  class="social_icon"
+                  src="svg/social-instagram.svg"
+                  alt="L'Instagram d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
+                ><img
+                  class="social_icon"
+                  src="svg/social-youtube.svg"
+                  alt="La chaîne Youtube d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://github.com/AlanisBedard"
+                ><img
+                  class="social_icon"
+                  src="svg/social-github.svg"
+                  alt="Le GitHub d'Alanis Bédard"
+              /></a>
+            </li>
+            <li>
+              <a href="https://sketchfab.com/alanisbedard"
+                ><img
+                  class="social_icon"
+                  src="svg/social-sketchfab.svg"
+                  alt="Le Sketchfab d'Alanis Bédard"
               /></a>
             </li>
           </ul>
-        </nav>
-      </div>
-    </header>
-
-    <footer>
-      <div class="wrapper footer__style">
-        <span class="line"></span>
-        <ul class="socials">
-          <li>
-            <a href="https://www.linkedin.com/in/alanisbedard/"
-              ><img
-                class="social_icon"
-                src="svg/social-linkedin.svg"
-                alt="Le LinkedIn d'Alanis Bédard"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.behance.net/alanisbedard"
-              ><img
-                class="social_icon"
-                src="svg/social-behance.svg"
-                alt="Le Behance d'Alanis Bédard"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/alanisbedard/?hl=fr"
-              ><img
-                class="social_icon"
-                src="svg/social-instagram.svg"
-                alt="L'Instagram d'Alanis Bédard"
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
-              ><img
-                class="social_icon"
-                src="svg/social-youtube.svg"
-                alt="La chaîne Youtube d'Alanis Bédard"
-            /></a>
-          </li>
-          <li>
-            <a href="https://github.com/AlanisBedard"
-              ><img
-                class="social_icon"
-                src="svg/social-github.svg"
-                alt="Le GitHub d'Alanis Bédard"
-            /></a>
-          </li>
-          <li>
-            <a href="https://sketchfab.com/alanisbedard"
-              ><img
-                class="social_icon"
-                src="svg/social-sketchfab.svg"
-                alt="Le Sketchfab d'Alanis Bédard"
-            /></a>
-          </li>
-        </ul>
-      </div>
-    </footer>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
