Modifier la page À propos pour y ajouter les styles et autres des sections Présentation, Références bourses et objectif.

--- a/src/about.html
+++ b/src/about.html
@@ -152,7 +152,7 @@
 
     <div class="site-container">
       <section class="achievements">
-        <div class="wrapper">
+        <div class="wrapper achievements__content">
           <div class="scholarship">
             <h3>Bourses</h3>
             <ul>
@@ -171,6 +171,7 @@
             </ul>
           </div>
           <div class="objectif">
+            <h3>Objectif</h3>
             <p>
               Obtenir de nouvelles compétences et expériences en entreprise dans
               l’univers multimédia.
@@ -180,7 +181,7 @@
       </section>
 
       <section class="references">
-        <div class="wrapper">
+        <div class="wrapper references__content">
           <div class="buttons">
             <a href="" class="button"
               >Télécharger ma lettre de recommendation</a
