Modifier les liens dans le footer des pages.

--- a/src/about.html
+++ b/src/about.html
@@ -91,35 +91,35 @@
             <h3>Logiciels</h3>
             <ul>
               <li>
-                <a href="https://www.blender.org/"
+                <a href="https://www.blender.org/" target="_blank"
                   ><img
                     src="svg/software-blender.svg"
                     alt="Logo du logiciel Blender"
                 /></a>
               </li>
               <li>
-                <a href="https://www.figma.com/fr/"
+                <a href="https://www.figma.com/fr/" target="_blank"
                   ><img
                     src="svg/software-figma.svg"
                     alt="Logo du logiciel Figma"
                 /></a>
               </li>
               <li>
-                <a href="https://procreate.art/"
+                <a href="https://procreate.art/" target="_blank"
                   ><img
                     src="svg/software-procreate.svg"
                     alt="Logo du logiciel Procreate"
                 /></a>
               </li>
               <li>
-                <a href="https://code.visualstudio.com/"
+                <a href="https://code.visualstudio.com/" target="_blank"
                   ><img
                     src="svg/software-vscode.svg"
                     alt="Logo du logiciel Visual Studio Code"
                 /></a>
               </li>
               <li>
-                <a href="https://www.adobe.com/ca_fr/"
+                <a href="https://www.adobe.com/ca_fr/" target="_blank"
                   ><img
                     src="svg/software-adobecreative.svg"
                     alt="Logo de la Suite Adobe"
@@ -203,7 +203,9 @@
           <span class="line"></span>
           <ul class="socials">
             <li>
-              <a href="https://www.linkedin.com/in/alanisbedard/"
+              <a
+                href="https://www.linkedin.com/in/alanisbedard/"
+                target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-linkedin.svg"
@@ -211,7 +213,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://www.behance.net/alanisbedard"
+              <a href="https://www.behance.net/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-behance.svg"
@@ -219,7 +221,9 @@
               /></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/alanisbedard/?hl=fr"
+              <a
+                href="https://www.instagram.com/alanisbedard/?hl=fr"
+                target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-instagram.svg"
@@ -227,7 +231,9 @@
               /></a>
             </li>
             <li>
-              <a href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
+              <a
+                href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
+                target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-youtube.svg"
@@ -235,7 +241,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://github.com/AlanisBedard"
+              <a href="https://github.com/AlanisBedard" target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-github.svg"
@@ -243,7 +249,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://sketchfab.com/alanisbedard"
+              <a href="https://sketchfab.com/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-sketchfab.svg"
