--- a/src/contact.html
+++ b/src/contact.html
@@ -123,7 +123,9 @@
           <span class="line"></span>
           <ul class="socials">
             <li>
-              <a href="https://www.linkedin.com/in/alanisbedard/"
+              <a
+                href="https://www.linkedin.com/in/alanisbedard/"
+                target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-linkedin.svg"
@@ -131,7 +133,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://www.behance.net/alanisbedard"
+              <a href="https://www.behance.net/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-behance.svg"
@@ -139,7 +141,9 @@
               /></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/alanisbedard/?hl=fr"
+              <a
+                href="https://www.instagram.com/alanisbedard/?hl=fr"
+                target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-instagram.svg"
@@ -147,7 +151,9 @@
               /></a>
             </li>
             <li>
-              <a href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
+              <a
+                href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
+                target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-youtube.svg"
@@ -155,7 +161,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://github.com/AlanisBedard"
+              <a href="https://github.com/AlanisBedard" target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-github.svg"
@@ -163,7 +169,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://sketchfab.com/alanisbedard"
+              <a href="https://sketchfab.com/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-sketchfab.svg"
