--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,9 @@
           <span class="line"></span>
           <ul class="socials">
             <li>
-              <a href="https://www.linkedin.com/in/alanisbedard/"
+              <a
+                href="https://www.linkedin.com/in/alanisbedard/"
+                target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-linkedin.svg"
@@ -91,7 +93,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://www.behance.net/alanisbedard"
+              <a href="https://www.behance.net/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-behance.svg"
@@ -99,7 +101,9 @@
               /></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/alanisbedard/?hl=fr"
+              <a
+                href="https://www.instagram.com/alanisbedard/?hl=fr"
+                target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-instagram.svg"
@@ -107,7 +111,9 @@
               /></a>
             </li>
             <li>
-              <a href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
+              <a
+                href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
+                target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-youtube.svg"
@@ -115,7 +121,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://github.com/AlanisBedard"
+              <a href="https://github.com/AlanisBedard" target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-github.svg"
@@ -123,7 +129,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://sketchfab.com/alanisbedard"
+              <a href="https://sketchfab.com/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-sketchfab.svg"
