--- a/src/projects.html
+++ b/src/projects.html
@@ -49,7 +49,9 @@
           <span class="line"></span>
           <ul class="socials">
             <li>
-              <a href="https://www.linkedin.com/in/alanisbedard/"
+              <a
+                href="https://www.linkedin.com/in/alanisbedard/"
+                target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-linkedin.svg"
@@ -57,7 +59,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://www.behance.net/alanisbedard"
+              <a href="https://www.behance.net/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-behance.svg"
@@ -65,7 +67,9 @@
               /></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/alanisbedard/?hl=fr"
+              <a
+                href="https://www.instagram.com/alanisbedard/?hl=fr"
+                target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-instagram.svg"
@@ -73,7 +77,9 @@
               /></a>
             </li>
             <li>
-              <a href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
+              <a
+                href="https://www.youtube.com/channel/UCUNT473RGfLn5Gyyt1mYWJA"
+                target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-youtube.svg"
@@ -81,7 +87,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://github.com/AlanisBedard"
+              <a href="https://github.com/AlanisBedard" target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-github.svg"
@@ -89,7 +95,7 @@
               /></a>
             </li>
             <li>
-              <a href="https://sketchfab.com/alanisbedard"
+              <a href="https://sketchfab.com/alanisbedard" target="_blank"
                 ><img
                   class="social_icon"
                   src="svg/social-sketchfab.svg"
