Modifier la vidéo de l'accueil (HTML, CSS).

--- a/src/index.html
+++ b/src/index.html
@@ -46,19 +46,13 @@
 
       <section class="hero">
         <div class="wrapper_nav content_index">
-          <div class="video">
-            <div class="video_container">
-              <span class="video_hide1"></span>
-              <iframe
-                src="https://www.youtube.com/embed/bibMXgY5duE?vq=hd1080&controls=0&rel=0&autoplay=1&loop=1&mute=1&playlist=bibMXgY5duE"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-              <span class="video_hide2"></span>
-            </div>
-          </div>
+          <video
+            class="demo_reel"
+            src="videos/test-demo-reel.mp4"
+            loop="loop"
+            autoplay="autoplay"
+            muted
+          ></video>
 
           <div class="index_infos">
             <div class="titles">
